<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray15">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:src="@drawable/login_bg"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_verification"
                        android:textColor="@color/colorAccent"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/we_will_send_you_a"
                            android:layout_marginEnd="6dp"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            android:textColor="@color/gray7"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/verification_code"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/on_this_mobile_number"
                        android:layout_marginEnd="6dp"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:textColor="@color/gray7"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/white"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="15dp"
                            android:layout_margin="15dp">
                            <EditText
                                android:id="@+id/etNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/type_your_phone_number"
                                android:inputType="phone"
                                android:ems="1"
                                android:padding="10dp"
                                android:textSize="20sp"
                                android:textStyle="bold|normal"
                                android:background="@drawable/et_shape"/>
                            <Button
                                android:id="@+id/btnContinue"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="@string/Continue"
                                android:textColor="@color/white"
                                android:textAllCaps="false"
                                android:textStyle="bold|normal"
                                android:textSize="16sp"
                                android:background="@drawable/btn_shape"
                                android:layout_marginTop="10dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</layout>